--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "typescript": "^3.7.4"
+  },
+  "scripts": {
+    "start:db": "json-server -w db.json",
+    "start:parcel": "parcel index.html"
   }
 }
